# inject-secrets

./: .gitignore  flake.nix  inject-secrets.toml  pyproject.toml
src/inject_secrets/: example.py  inject.py  load_providers.py  main.py  onepassword.py  resolve.py  tokenizer.py
src/inject_secrets/providers/: bitwarden.py  onepassword.py  toml.py
tests/: test_inject.py  test_load_providers.py  test_tokenizer.py
